# esp32_ble_ota

./: .gitignore  .gitmodules  README.md
ble_client/: main.py
esp/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
esp/components/bmi160Impl/: CMakeLists.txt  bmi160Impl.c  bmi160Impl.h
esp/components/lsm303agrImpl/: CMakeLists.txt  lsm303agrImpl.c  lsm303agrImpl.h
esp/components/src/: lsm303agrImpl.c
esp/components/valiturus_button/: CMakeLists.txt  valiturus_button.c  valiturus_button.h
esp/components/valiturus_led/: CMakeLists.txt  valiturus_led.c  valiturus_led.h
esp/main/: CMakeLists.txt  gatt_svr.c  gatt_svr.h  main.c
esp/main/application/bluetooth/: bluetooth.c  bluetooth.h  bluetooth_gap.c  bluetooth_gap.h  bluetooth_gatt.c  bluetooth_ota.c  bluetooth_ota.h  gap.c  gatt.c  gatt.h  ota_gatt_service.c  ota_gatt_service.h
esp/main/application/exercise/: exercise.c  exercise.h
esp/main/application/ota/: ota.c  ota.h
esp/main/examples/ble_ota_example/: ble_ota_example.c  ble_ota_example.h  gap.c  gap.h  gatt_svr.c  gatt_svr.h
esp/main/examples/bmi_160_example/: bmi_160_example.c  bmi_160_example.h
esp/main/examples/button_led_example/: button_led_example.c  button_led_example.h
esp/main/examples/lsm303agr_example/: lsm303agr_example.c  lsm303agr_example.h
